Refactor: small build changes

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,8 +2,8 @@
 requires = ["setuptools", "wheel", "Cython"]
 
 [project]
-name = "langbench"
-version = "0.0.1"
+name = "BenchSyntaxLab"
+version = "0.0.2"
 authors = [{name = "Arthur Carvalho", email = "arthurbcarvalho@gmail.com"}]
 readme = "README.md"
 requires-python = "<=3.11" # not sure
